--- a/css/chat.css
+++ b/css/chat.css
@@ -17,9 +17,11 @@ legend{
 }
 button{
     background-color: aqua;
-    border-radius: 50px;
+    border-radius: 60px;
     color: white;
     height: 40px;
+    margin-left: 150px;
+    width: 100px;
 
 }
 textarea{
